<resources>
    <string name="app_name">Aprender ortografía</string>

    <!-- Login -->
    <string name="txtLogin">ENTRAR</string>
    <string name="hintEmail">Introduzca su Email</string>
    <string name="hintPassword">Introduzca su contraseña</string>
    <string name="btnLogin">ENTRAR</string>

    <!-- Registro -->
    <string name="txtCreateAccount">REGISTRO</string>
    <string name="hintName">Introduce tu(s) nombre(s)</string>
    <string name="hintLastName">Introduce tus apellidos</string>
    <string name="btnCreateAccount">CREAR CUENTA</string>

    <!-- Actualizar -->
    <string name="txtUpdateAccount">ACTUALIZAR</string>
    <string name="txtEmail">Email</string>
    <string name="btnUpdateAccount">ACTUALIZAR</string>

    <!-- Drawer -->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Menú -->
    <string name="txtMainMenu">Aprender Ortografía</string>
    <string name="txtModule1">Acentuación</string>
    <string name="txtModule2">Diferencias</string>
    <string name="txtModule3">Puntuación</string>


    <!-- Menú desplegable -->
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bienvenido(a)</string>
    <string name="mMainMenu">Inicio</string>
    <string name="mModule1">Acentuación</string>
    <string name="mModule2">Diferencias</string>
    <string name="mModule3">Puntuación</string>
    <string name="mSettings">Ajustes</string>
    <string name="mLogOut">Cerrar sesión</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="exitApplicattion">Vuelve a presionar para salir</string>
    <string name="txtOthers">Otros</string>

    <!-- Alert Dialogs -->
    <string name="errorApplicattion">¡Error en aplicación!</string>
    <string name="passwordIncorrect">¡La contraseña es incorrecta!</string>
    <string name="fill_two_fields">¡Llene los dos campos!</string>
    <string name="update_successful">Actualización Exitosa.</string>
    <string name="fill_all_fields">Llene todos los campos.</string>
    <string name="try_again">La aplicación fallo, inténtalo nuevamente.</string>
    <string name="create_account_successful">Registro Exitoso.</string>
    <string name="account_exist">¡El email ya existe!</string>
    <string name="delete_successful">Se ha borrado la cuenta, hasta pronto.</string>
    <string name="passwordRepeatIncorrect">Las contraseñas no coinciden.</string>
    <string name="emailIncorrect">El email no coincide con la cuenta.</string>
    <string name="are_you_sure">¿Estás seguro de esto?</string>

    <string name="title_error">Error</string>
    <string name="positive_button_ok">OK</string>
    <string name="account_no_found">Lo sentimos, no pudimos encontrar tu cuenta.</string>
    <string name="title_warning">Alerta</string>
    <string name="title_welcome">Bienvenido</string>
    <string name="title_bye">Adiós</string>
    <string name="positive_button_yes">Si</string>
    <string name="neutral_button_cancel">Cancelar</string>
    <string name="negative_button_no">No</string>
    <string name="title_successful">Exitoso</string>

    <!-- Settings -->
    <string name="txtSettings">AJUSTES</string>
    <string name="txtUpdateUser">Actualizar datos de usuario:</string>
    <string name="txtDeleteUser">Eliminar datos de usuario:</string>

    <!-- DeleteAccount -->
    <string name="txtDeleteAccount">ELIMINAR</string>
    <string name="hintEmailVerify">Verifica tu email</string>
    <string name="hintRepeatPassword">Repita su contraseña</string>
    <string name="btnDeleteAccount">ELIMINAR</string>

    <!-- Mantenimiento -->
    <string name="txtMaintenance">¡En mantenimiento!</string>
    <string name="txtcoming_soon">Próximamente</string>

    <!-- Notificación -->
    <string name="notification_title">Regresa</string>
    <string name="notification_content">Aun sigo aquí, utilízame.</string>

    <!-- Root -->
    <string name="txt_backup_db">Crear copia de base de datos:</string>
    <string name="btn_backup">Respaldo</string>
    <string name="error_backup">Error al generar el respaldo</string>
    <string name="backup_successful">El respaldo se generó exitosamente</string>
    <string name="toast_permissions_accept">Ya puedes generar el respaldo</string>
    <string name="toast_permissions_decline">No podras generar el respaldo</string>

    <!-- Lesson -->
    <string name="txtQuizz">Examen</string>
    <string name="txtLesson_progress_no">No. </string>
    <string name="txtLesson_progress_si">Si</string>
    <string name="txtLesson1_module1">Introducción</string>
    <string name="txtExample">Ejemplo:</string>
    <string name="txtExcersice">Ejercicio</string>
    <string name="title_incorrect">Respuesta incorrecta</string>
    <string name="answer_incorrect">Revisa de nuevo la lección</string>
    <string name="hintAnswer">Respuesta</string>
    <string name="txtCongratulations">Felicidades</string>
    <string name="lesson_finished">Lección terminada</string>
    <string name="answer_incorrect_quiz">Revisa de nuevo las lecciónes</string>
    <string name="quiz_finished">Examen terminado</string>

    <string name="txtLesson1_module2">G-J</string>
    <string name="txtLesson1_module3">Punto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>

