<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.menus.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        android:background="@color/colorPrimary">

        <!-- Icono -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/weight_default"
            android:layout_weight="25">

            <!-- Boton Regreasar -->
            <ImageButton
                android:id="@+id/ibCancel"
                android:layout_width="@dimen/cancel"
                android:layout_height="@dimen/cancel"
                android:layout_margin="@dimen/margin_cancel_button"
                android:background="@drawable/cancel"/>

            <!-- Logo -->
            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="@dimen/logo"
                android:layout_height="@dimen/logo"
                android:layout_centerInParent="true"
                android:src="@drawable/logo"
                />

        </RelativeLayout>

        <!-- Datos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/weight_default"
            android:paddingLeft="@dimen/padding_left_default"
            android:paddingRight="@dimen/padding_right_default"
            android:layout_weight="75"
            android:orientation="vertical">

            <!-- Settings -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSettings"
                android:textColor="@color/tertiary_text"
                android:textSize="@dimen/upper_letters"/>

            <!-- Update -->
            <TextView
                android:id="@+id/txtUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtUpdateUser"
                android:textColor="@color/tertiary_text"
                android:textSize="@dimen/size_hint_default"
                android:layout_marginTop="@dimen/textview_default_margintop" />

            <!-- UpdateAccount -->
            <Button
                android:id="@+id/btnUpdateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_button"
                android:text="@string/btnUpdateAccount"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/txt_Bbutton_default"
                android:theme="@style/RaisedButtonCreateAccount"/>

            <!-- Update -->
            <TextView
                android:id="@+id/txtDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDeleteUser"
                android:textColor="@color/tertiary_text"
                android:textSize="@dimen/size_hint_default"
                android:layout_marginTop="@dimen/textview_default_margintop" />

            <!-- CreateAccount -->
            <Button
                android:id="@+id/btnDeleteAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_button"
                android:text="@string/btnDeleteAccount"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/txt_Bbutton_default"
                android:theme="@style/RaisedButtonDeleteAccount" />

            <!-- Backup -->
            <Button
                android:id="@+id/btnBackupDB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_button"
                android:text="@string/btn_backup"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/txt_Bbutton_default"
                android:theme="@style/RaisedButtonCreateAccount"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>